# little-red-rover

./: .gitmodules  Dockerfile  README.md  docker-compose.yml
.cache/clangd/index/: hello_world_main.c.6FF67044F369BAA1.idx
.github/workflows/: build-esp-firmware  build-esp-firmware.yml  docker-publish.yml
HARDWARE/: .gitignore  README.md
HARDWARE/little_red_rover/: #auto_saved_files#  digikey_imports.kicad_sym  fp-lib-table  little_red_rover.kicad_pcb  little_red_rover.kicad_pro  little_red_rover.kicad_sch  sym-lib-table  ~little_red_rover.kicad_pcb.lck
HARDWARE/little_red_rover/digikey_imports.pretty/: 18650_holder.kicad_mod  CONN_SM04B-GHS-TB_JST.kicad_mod  TO_4HCZ0F_SHP.kicad_mod  UDFN8_2X2_MCH-L.kicad_mod  m3_threaded_insert.kicad_mod  qr_code.kicad_mod
HARDWARE/little_red_rover/gerbers/: little_red_rover-B_Cu.gbr  little_red_rover-B_Mask.gbr  little_red_rover-B_Paste.gbr  little_red_rover-B_Silkscreen.gbr  little_red_rover-Edge_Cuts.gbr  little_red_rover-F_Cu.gbr  little_red_rover-F_Mask.gbr  little_red_rover-F_Paste.gbr  little_red_rover-F_Silkscreen.gbr  (+5 more)
SOFTWARE/: .clang-format  Dockerfile  README.md  docker-compose.yml  vis_sim.Dockerfile
SOFTWARE/.devcontainer/: devcontainer.json
SOFTWARE/docker/: docker-compose.yml  foxglove_bridge.Dockerfile  micro_ros_agent.Dockerfile  micro_ros_esp_idf.Dockerfile  nginx.conf  ros2_workspace.Dockerfile  vis_sim.Dockerfile
SOFTWARE/esp32_firmware/: .clang-format  .clangd  .rgignore  CMakeLists.txt  app.c  sdkconfig  sdkconfig.defaults  sdkconfig.old
SOFTWARE/esp32_firmware/components/msgpack/: CMakeLists.txt
SOFTWARE/esp32_firmware/components/socket_mgr/: CMakeLists.txt  messages.pb.c  messages.pb.h  messages.proto  pb_utils.c  socket_mgr.c
SOFTWARE/esp32_firmware/components/socket_mgr/include/: pb_utils.h  socket_mgr.h
SOFTWARE/little_red_rover_ws/src/little_red_rover/: package.xml  setup.cfg  setup.py
SOFTWARE/little_red_rover_ws/src/little_red_rover/assets/: lrr_default_layout.json
SOFTWARE/little_red_rover_ws/src/little_red_rover/assets/rover/: config.json  lidar_motor.part  lidar_top.part  lidar_top.stl  motor_mount_shim.part  motor_mount_shim.stl  pcb.part  pcb.stl  robot.urdf  robot_body_visual.stl  skid.part  skid.stl  tt_motor_3777_v10.part  tt_motor_mount_left.stl  tt_motor_mount_right.part  wheel.part  wheel.stl  wheel_2_visual.stl  wheel_visual.stl
SOFTWARE/little_red_rover_ws/src/little_red_rover/assets/worlds/: testing.sdf
SOFTWARE/little_red_rover_ws/src/little_red_rover/config/: ekf.yaml  joy_config.yaml  lrr_controllers.yaml  slam_toolbox.yaml  slam_toolbox_sync.yaml
SOFTWARE/little_red_rover_ws/src/little_red_rover/description/: lrr.urdf.xacro
SOFTWARE/little_red_rover_ws/src/little_red_rover/description/rover/: config.json  coordinate_frame.stl  encoder_ring.part  lidar_motor.part  lidar_motor.stl  lidar_top.part  lidar_top.stl  motor_attachment_shim.part  motor_mount_shim.part  motor_mount_shim.stl  pcb.part  pcb.stl  robot.urdf  robot_body_visual.stl  skid.part  skid.stl  tt_motor_3777_v10.part  tt_motor_3777_v10.stl  tt_motor_mount.part  tt_motor_mount.stl  tt_motor_mount_right.stl  wheel.part  wheel_left.part  wheel_left_visual.stl  wheel_right.part  wheel_right_visual.stl  wheel_visual.stl
SOFTWARE/little_red_rover_ws/src/little_red_rover/launch/: hardware.launch.py  lrr.launch.py  lrr_launch.py  lrr_vis_sim.launch.py  sim.launch.py
SOFTWARE/little_red_rover_ws/src/little_red_rover/little_red_rover/: base.py  hal.py  odometry_publisher.py
SOFTWARE/little_red_rover_ws/src/little_red_rover/little_red_rover/pb/: messages.proto
SOFTWARE/little_red_rover_ws/src/little_red_rover/worlds/: testing.sdf
SOFTWARE/little_red_rover_ws/src/llr_base/: package.xml  setup.cfg  setup.py
SOFTWARE/little_red_rover_ws/src/llr_base/launch/: llr_vis_sim.launch.py
SOFTWARE/little_red_rover_ws/src/llr_base/llr_base/: lidar_plotter.py
SOFTWARE/ros2_ws/src/little_red_rover/: package.xml
SOFTWARE/ros2_ws/src/little_red_rover/config/: slam_toolbox.yaml
SOFTWARE/ros2_ws/src/little_red_rover/description/rover/: README.md  coordinate_frame.part  encoder_ring.stl  lidar_motor.part  lidar_motor.stl  motor_attachment_shim.stl  motor_mount_shim.part  pcb.part  robot_body_visual.stl  tt_motor_mount_left.part  wheel_2_visual.stl  wheel_left.part  wheel_right.part  wheel_right.stl
SOFTWARE/ros2_ws/src/little_red_rover/launch/: hardware.launch.py
SOFTWARE/ros2_ws/src/little_red_rover/little_red_rover/: odometry_publisher.py
SOFTWARE/ros2_ws/src/little_red_rover/little_red_rover/pb/: messages_pb2.py  messages_pb2.pyi
docker/: docker-compose.yml
docker/micro_ros_iron_agent/: Dockerfile
docker/micro_ros_iron_flash/: Dockerfile
docker/ros_iron_base/: Dockerfile
docs/: CNAME  README.md  _coverpage.md  _sidebar.md  index.html  quickstart.md
docs/developing/: README.md  linux.md
(+73 files in other folders)
