<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>little_red_rover</name>
	<version>0.0.0</version>
	<description>Base package for Little Red Rover (LLR)</description>
	<maintainer email="michael@michael-crum.com">Michael Crum</maintainer>
	<license>MIT</license>

	<test_depend>ament_copyright</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>python3-pytest</test_depend>
	<exec_depend>ros2launch</exec_depend>

	<exec_depend>image_transport_plugins</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>ros_gz_bridge</exec_depend>
	<exec_depend>ros_gz_sim</exec_depend>
	<exec_depend>ros_gz_image</exec_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
